# avrtest

./: CMakeLists.txt  avrdude_conf_parser.cpp  avrdude_parser_conf.h  build.txt  main.cpp  mainwindow.cpp  mainwindow.h  readme.md
